argocd/backstage/clusters/backstage-test-petr-EKS129/apps/react-app/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react-app
  labels:
    backstage.io/kubernetes-id: react-app
---
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: react-app
  labels:
    app: react-app
    backstage.io/kubernetes-id: react-app
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: react-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: react-app
  labels:
    backstage.io/kubernetes-id: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
        backstage.io/kubernetes-id: react-app
    spec:
      serviceAccountName: react-app
      containers:
      - image: docker.io/kcbabo/keith-react-app:latest
        imagePullPolicy: Always
        name: react-app
        ports:
        - containerPort: 80
