argocd/backstage/clusters/backstage-test-petr-EKS129/apps/react-app/app/gloo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: react-app
  namespace: react-app
  labels:
    backstage.io/kubernetes-id: react-app
spec:
  parentRefs:
  - name: http-gateway
    namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: react-app
      port: 80
